# NASEM-Model-Python

./: .coveragerc  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-R_Code  NASEM_run_model.py  README.md  README.qmd  Variable List.xlsx  environment.yml  input.txt  pyproject.toml  pytest.ini  setup-dag.sh  test_delete_later.py
.github/: pull_request_template.md
NASEM_functions/: NASEM_ME_equations.py  NASEM_MP_equations.py  __init__.py  execute_model.py  ration_balancer_functions.py
dev/: README.md
dev_scripts/: NASEM_run_model.py  Poetry package instructions.md  R_values-Inf_test.json  R_values.json  Variable List.xlsx  animal_input_order.txt  create_end_to_end_test_json.py  demonstration.ipynb  dev_execute_NASEM.ipynb  equation_testing.ipynb  feed_lib_as_df.py  input_2.csv  load_csv.ipynb  old_execute_functions  text_input_ration_balancer.ipynb
docs/: NASEM_run_model.py  _quarto.yml  _sidebar.yml  example.ipynb  index.qmd  objects.json  requirements.txt
docs-old/: conf.py
old_scripts/: clean_data.py  demonstration.ipynb  get_diet_data.ipynb  graph_display_testing.ipynb  load_csv.ipynb  pull_from_database.ipynb  text_input_ration_balancer.ipynb
original_R_script/: Cross-check-NRC Dairy 2020 Model Fn - 2022_09_02 copy.R  Dairy_Model_Load.R  NRC Dairy 2020 Model Fn - 2022_09_02.R
outputs/: data_to_plot.csv
ration_balancer/: __init__.py
script/: ME_functions.py  MP_functions.py  clean_data.py  database_interaction.ipynb  demonstration.ipynb  get_diet_data.ipynb  load_csv.ipynb  pull_from_database.ipynb  temp_testing.ipynb
test_files/: AA_test_data-Braeden-PC.csv  AA_test_data.csv  merged_7day_ind_withDHI.csv  merged_cow_with_feed_7day_means_20230601_1545.parquet  test_data.csv
tests/: DMI_equations_test.json  OLD_test_DMI_equations.py  amino_acid_test.json  animal_equations_test-original.json  animal_equations_test.json  body_composition_equations_test.json  energy_requirement_equations_test.json  fecal_equations_test.json  gestation_equations_test.json  infusion_equations_test.json  manure_equations_test.json  methane_equations_test.json  microbial_protein_equations_test.json  micronutrient_requirement_equations_test.json  milk_equations_test.json  nutrient_intakes_test.json  (+32 more)
(+293 files in other folders)
