[tool.poetry]
name = "nasem_dairy"
version = "1.0.0a0"
description = "Implementation of (part of) NASEM 2021 dairy model in python "
authors = ["Braeden Fieguth & David Innes"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
numpy = "^1.25.1"
icecream = "^2.1.3"
pytest = "^7.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:dateutil.tz"
]
