[tool.poetry]
name = "nasem_dairy"
version = "1.0.2"
description = "Implementation of the NASEM Nutrient Requirements of Dairy Cattle 8th Edition in Python"
authors = ["Braeden Fieguth & David Innes"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "nasem_dairy", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
numpy = "^1.25.1"
pytest = "^7.4.4"
pytest-cov = "^5.0.0"
importlib-resources = "^6.4.0"
salib = "^1.5.1"

[tool.poetry.extras]
dag = []

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
pytest = "^7.4.4"
sphinx = "^7.4.7"
sphinx-copybutton = "^0.5.1"
pydata-sphinx-theme = "^0.13.0"
sphinx-design = "^0.5.0"
sphinx-autodoc-typehints = "^1.23.0"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = [
    "ignore::DeprecationWarning:dateutil.tz",
    "ignore::DeprecationWarning:gi.overrides",
    "ignore::DeprecationWarning:pkgutil"
]
